--- a/app/globals.css
+++ b/app/globals.css
@@ -3,13 +3,9 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --green-light: #e6f4ea;
+  --green-medium: #55a66c;
+  --green-dark: #1d5131;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -19,8 +15,3 @@
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-}
